--- a/src/AppBundle/Resources/views/Catalog/productPopup.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/productPopup.html.twig
@@ -1,3 +1,11 @@
+<style>
+    .slider-for__item:not(.slick-slide){
+        display: none;
+    }
+    .slider-for__item:first-child{
+        display: block !important;
+    }
+</style>
 <div id="product" class="window-open">
     <div class="window-open-cont">
         <div class="wrap product">
@@ -11,21 +19,23 @@
                         {% endif %}
                     </div>
                     {#<ul class="link-list unstyled">#}
-                        {#<li class="link-list__item"><a href="#" class="link-list__link link">Современный дизайн</a></li>#}
-                        {#<li class="link-list__item"><a href="#" class="link-list__link link">Геометрический дизайн</a></li>#}
+                    {#<li class="link-list__item"><a href="#" class="link-list__link link">Современный дизайн</a></li>#}
+                    {#<li class="link-list__item"><a href="#" class="link-list__link link">Геометрический дизайн</a></li>#}
                     {#</ul>#}
                     <p>
-                       {{ product.text|nl2br }}
+                        {{ product.text|nl2br }}
                     </p>
                     {% if product.software|length > 0 %}
                         <p>{% for e in product.software %}{{ e.name }}{% if loop.last == false %}, {% endif %}{% endfor %}</p>
                     {% endif %}
                     {% if product.tags|length > 0 %}
-                    <ul class="tags-list">
-                        {% for e in product.tags %}
-                            <li class="tags-list__item"><a href="{{ path('catalog_tag', {id:e.id}) }}" class="tags-list__link">{{ e.name }}</a>{% if loop.last == false %}<span>,</span>{% endif %}</li>
-                        {% endfor %}
-                    </ul>
+                        <ul class="tags-list">
+                            {% for e in product.tags %}
+                                <li class="tags-list__item">
+                                    <a href="{{ path('catalog_tag', {id:e.id}) }}" class="tags-list__link">{{ e.name }}</a>{% if loop.last == false %}
+                                    <span>,</span>{% endif %}</li>
+                            {% endfor %}
+                        </ul>
                     {% endif %}
                     <div class="box-rating rating">
                         <span class="rating__count js-product-likes">{{ product.stars }}</span>
@@ -43,20 +53,8 @@
                             <a href="{{ path('catalog_product', {alias:product.alias}) }}" class="link">{% trans %}comment{% endtrans %}</a>
                         </div>
                     </div>
-                    <div class="box-button"><a href="{{ path('catalog_product', {alias:product.alias}) }}" class="link">{% trans %}learn_more{% endtrans %}</a></div>
-
-                    <div class="js-model-files">
-                        {% if app.user %}
-                            {%  if alreadyBuy %}
-                                {% include '@App/Catalog/_product_files.html.twig' %}
-                            {% else %}
-                                {% if product.moderated %}
-                                    <div class="box-button text-center">
-                                        <a href="#" class="link" onclick="buyThisModel(this, {{ product.id }});return false;">{% trans %}download{% endtrans %}</a>
-                                    </div>
-                                {% endif %}
-                            {% endif %}
-                        {% endif %}
+                    <div class="box-button">
+                        <a href="{{ path('catalog_product', {alias:product.alias}) }}" class="link">{% trans %}learn_more{% endtrans %}</a>
                     </div>
                 </div>
             </div>
@@ -64,6 +62,9 @@
                 <div class="product-slider">
                     <div class="slider-for">
                         <div class="slider-for__item"><img src="{% path product.image, 'full' %}" alt=""></div>
+                        {% for e in product.images %}
+                            <div class="slider-for__item"><img src="{% path e.image, 'full' %}" alt=""></div>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -71,16 +72,14 @@
     </div>
 </div>
 <script>
-    $(function(){
-//        setTimeout(function(){
-//            $('.slider-for').slick({
-//                slidesToShow: 1,
-//                slidesToScroll: 1,
-//                fade: true,
-//                asNavFor: '.slider-nav',
-//                adaptiveHeight: true
-//            });
-//        }, 500);
+    $(document).ready(function () {
+        setTimeout(function () {
+            $('.slider-for').slick({
+                slidesToScroll: 1,
+                fade: true,
+                adaptiveHeight: true
+            });
+        }, 500);
 
     });
 </script>
