Перевод для комментариев

--- a/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
@@ -13,7 +13,7 @@
                         <a href="{{ path('catalog_moderation') }}" class="wrap-list__link">{% trans %}moderation_header{% endtrans %}</a>
                     </li>
                     <li class="wrap-list__item">
-                        <a href="{{ path('catalog_products_comments') }}" class="wrap-list__link">Комментарии к моделям</a>
+                        <a href="{{ path('catalog_products_comments') }}" class="wrap-list__link">{% trans %}comments_model_admin{% endtrans %}</a>
                     </li>
                 {% endif %}
                 <li class="wrap-list__item">
