--- a/src/AppBundle/Resources/views/Catalog/productComment.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/productComment.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AppBundle:Cabinet:_cabinet_base.html.twig' %}
 
-{% block cabinetTitle %}Комментарии к моделям{% endblock %}
+{% block cabinetTitle %}{% trans %}comments_model_admin{% endtrans %}{% endblock %}
 
 {% block cabinetContent %}
 
