Комментарии к моим моделям

--- a/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
@@ -17,6 +17,9 @@
                     </li>
                 {% endif %}
                 <li class="wrap-list__item">
+                    <a href="{{ path('catalog_my_products_comments') }}" class="wrap-list__link">{% trans %}comments_my_model_admin{% endtrans %}</a>
+                </li>
+                <li class="wrap-list__item">
                     <a href="{{ path('cabinet') }}" class="wrap-list__link">{% trans %}profile{% endtrans %}</a>
                 </li>
                 <li class="wrap-list__item">
