--- a/src/AppBundle/Resources/views/Catalog/productComment.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/productComment.html.twig
@@ -5,6 +5,7 @@
 {% block cabinetContent %}
 
     <div class="box-comment">
+        <p>Показаны комментарии к опубликованным в каталоге.<br />К удаленным, заблокированным и не отмодерированным омделям комментарии не показываются.</p>
         <div class="js-comments">
             {% include 'AppBundle:Catalog:_product_comments.html.twig' %}
         </div>
